--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,3 +4,7 @@ $color-3: white;
 $color-4: rgb(24, 199, 70);
 $color-5: #ffdcdc;
 
+$screen-max-width-1: 1580px;
+$screen-max-width-2: 1280px;
+$screen-max-width-3: 992px;
+$screen-max-width-4: 1200px;
