More full-size 2-4 pixels perfect haha

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -11,3 +11,15 @@
     @content;
   }
 }
+
+@mixin w3 {
+  @media (max-width: #{$screen-max-width-3}) {
+    @content;
+  }
+}
+
+@mixin h1 {
+  @media (max-height: #{$screen-max-height-1}) {
+    @content;
+  }
+}
