--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,5 +6,7 @@ $color-5: #ffdcdc;
 
 $screen-max-width-1: 1580px;
 $screen-max-width-2: 1280px;
-$screen-max-width-3: 992px;
+$screen-max-width-3: 920px;
 $screen-max-width-4: 1200px;
+
+$screen-max-height-1: 850px;
