--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $color-5: #ffdcdc;
 $screen-max-width-1: 1580px;
 $screen-max-width-2: 1280px;
 $screen-max-width-3: 920px;
-$screen-max-width-4: 1200px;
+$screen-max-width-4: 480px;
 
 $screen-max-height-1: 850px;
+$screen-max-height-2: 680px;
