Responsivity almost done

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -30,8 +30,8 @@
   }
 }
 
-//@mixin h2 {
-//  @media (max-height: #{$screen-max-height-2}) {
-//    @content;
-//  }
-//}
+@mixin h2 {
+  @media (max-height: #{$screen-max-height-2}) {
+    @content;
+  }
+}
